tests/negative/neg_pr113_nested_tuple.safe
package Neg_PR113_Nested_Tuple
   Value : ((Boolean, Integer), Integer) = ((True, 1), 2);

